empezando con las notificaiones

--- a/LP2Soft/Tarjetas/tarjNotificacion.resx
+++ b/LP2Soft/Tarjetas/tarjNotificacion.resx
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imgAmigo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="imgNotificacion.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="imgAmigo.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="imgNotificacion.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD8
-        DAAAAk1TRnQBSQFMAgEBAgEAAXABAAFwAQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABeAMAAR4DAAEBAQABCAUAARABDhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACi
+        DgAAAk1TRnQBSQFMAgEBBQEAAQgBAAEIAQABFgEAARYBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABWAMAASwDAAEBAQABCAUAASABDxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
         AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
@@ -153,34 +153,41 @@
         AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
-        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/EQAC/wHwAfcB6gER
-        ARMB7QG8AfQB/xMAAv8B8AH3AeoBEQETAe0BvAH0Af9PAAH0AZIHAAHsAfMB/xIAAfQBkgcAAewB8wH/
-        TQAB9AEUCQABFQHxAf8QAAH0ARQJAAEVAfEB/0sAAfQBEQsAARAB8gH/DgAB9AERBAABEQFtARQEAAEQ
-        AfIB/0kAAf8B7A0AAW0B9A0AAf8B7AUAAewBAAEHBQABbQH0PAAB8Qq8AfMB/wHxAQ4OAAG8AfEKvAHz
-        Af8B8QEOBQAB7AEAAQcGAAG8PAAB7AoAAe8B/wEHAQ4OAAGSAewKAAHvAf8BBwEOBQAB7AEAAQcGAAGS
-        PAAB8QoAAbwB/wHsAgABDgkHARQCAAHqAfEKAAG8Af8B7AIAAQ4DBwHxAQAB8wMHARQCAAHqPAAB/wHt
-        CQAB8QH/AeoCAAEPCQABbQIAAREB/wHtCQAB8QH/AeoCAAEPCQABbQIAARE9AAH0Ae0IAAG8Af8B7AEO
-        AQABDgnsARECAAHqAQAB9AHtCAABvAH/AewBDgEAAQ4D7AEHAQAB8QPsARECAAHqPQAB/wH0Ae8BEwYA
-        Ae8B/wEHAQ4OAAH3AQAB/wH0Ae8BEwYAAe8B/wEHAQ4FAAHsAQABBwYAAfc+AAL/AfMB7wETBAAB7QH/
-        AfIBDg4AAfACAAL/AfMB7wETBAAB7QH/AfIBDgUAAewBAAEHBgAB8EAAAv8B9AHyAQcB7QHqARUB8gH/
-        Ae8NAAGSAf8EAAL/AfQB8gEHAe0B6gEVAfIB/wHvBQAB7AEAAQcFAAGSAf9CAAX/AW0B7AL/AeoLAAEU
-        AfQB/wYABf8BbQHsAv8B6gQAAQ4BDwEOBAABFAH0Af9GAAH0AeoBAAG8Af8BAAEVCQABEQH0DAAB9AHq
-        AQABvAH/AQABFQkAAREB9EYAAf8B9AFtAgABDgHxAv8BkgMOAgACDgHsAfQLAAH/AfQBbQIAAQ4B8QL/
-        AZIDDgIAAg4B7AH0RwAB/wHsBAABEQHxAv8B8gEHAewBbQHsAQcB8QH/DAAB/wHsBAABEQHxAv8B8gEH
-        AewBbQHsAQcB8QH/RwAB/wEHAREGAAHtAfIB/xIAAf8BBwERBgAB7QHyAf9OAAH0AewIAAEQAfISAAH0
-        AewIAAEQAfJOAAHxARQIAAEPAQcSAAHxARQIAAEPAQdOAAG8AQ8IAAEOAe0SAAG8AQ8IAAEOAe1OAAEH
-        CgABbRIAAQcKAAFtTgABBwoAARISAAEHCgABEk4AAQcKAAESEgABBwoAARJOAAEHCgABEhIAAQcKAAES
-        TgAB8AERCAABDgHtEgAB8AERCAABDgHtTgAB8wFtCAABDwG8EgAB8wFtCAABDwG8TgAB/wHtCAABFQH0
-        EgAB/wHtCAABFQH0TgAB/wHyARIGAAEOAQcB/xIAAf8B8gESBgABDgEHAf9QAAH0Ae8BbQEQAQ8BEwHt
-        AfIWAAH0Ae8BbQEQAQ8BEwHtAfJJAAFCAU0BPgcAAT4DAAEoAwABeAMAAR4DAAEBAQABAQUAAeABARYA
-        A/8BAAL/AQABHwH/AfwBAAFwCAAC/wEAAQ8B/wH8AQABMAgAAf8B/gEAAQcB/wH4AQABEAgAAf8B/AEA
-        AQMB/wHwCgAB/wH4AQABAwH/AeABEA8AARAPAAEQDwABEAsAAX8BwAEAAQEB/wkAAYACAAECAgABEAkA
-        AYACAAECAgABEAkAAcACAAEDAgABEAkAAfACAAEDAcABAAEQCQAB/AIAAQMB8AsAAf8BwQEAAQ8B/wEE
-        AQABMAgAAf8CAAEfAfwCAAFwCAAB/wIAAT8B/AIAAfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/
-        AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/
-        AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+
-        AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/AfgBAAF/AfAIAAH+AQABHwH/
-        AfgBAAF/AfAIAAH/AYABfwH/Af4BAQH/AfAIAAs=
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/sQAB9AHxEvAB8QH/
+        QgAB6xMAAQ4B7EMAAe8TAAEOQwAB7wEABm0B7AEABG0B9EkAAe8HAAERAQABEgMTAfRJAAHvBwABEU8A
+        Ae8HAAERBgABbUgAAe8HAAERAQAFBwHxSAAB7wcAAREBAAb/SAAB7wcAAREGAAFtSAAB7wEAB/8BAAb/
+        SAAB7wEADfAB8kgAAe8OAAFtSAAB71cAAe8RAAHvAvJDAAHtEPQBAAHwVwAB8P8AVQAB8gQAAe8gAAG8
+        ARUQAAERFQABEQkAAe8EAAETCQAB8RIRAewCAAHyAQ4BFAHyDv8B7AERAgABkhH/AewBEQgAAfIBFQUA
+        AQcB/wcAAfQBDxEAAfECAAEHAQAB8wHyDfABAAHsARECAAHvAQAC8AHyAQAC8AHxAQAD8AUAAewBEQMA
+        AfEBvAH/AfQB7wEQBgABDgHsAfIB/wHzAfADAAH/AbwQAAHsAf8CAAEHAQAB/wH4DgAB7AERAgAB7wMA
+        AW0DAAERCQAB7AERAgAB/wFDEAABDgHzBAABBwFDDAABDwHrAf8DAAEHAQABBwH/DgAB7AERAgAB7wMA
+        AW0DAAERCQAB7AERAgAB7xIAARQB/wMAAf8B9AHvARAJAAHsAfIB/wQAAQcBAAEOAeoNbQEAAewBEQIA
+        Ae8BAALyAfMBAAPyAQAD8gUAAewBEQEAAf8BQwYAAQ4B6gH3Ae8B6wEQBgABDgG8BgAB/wHyAQcB+AIA
+        ARQB9wHwAf8HAAEHEQAB7AERAgAB7wEAA/QBAAP0AQAD9AEAA/QBAAHsAREBAAH0ARIFAAEPAbwB/wIA
+        Af8B8wESBQABDgEHCQAB9AIAAZIB/wkAAQcRAAHsARECAAHvAwABbQMAAREFAAETAwAB7AERAgAB9AEP
+        BAABkgYAAfIBDwQAAfcJAAH0BAABvAH/CAABBxEAAewBEQIAAe8DAAFtAwABEQUAARMDAAHsAREDAAHt
+        AwABEQH/BgAB/wHrAwABEQH/CAAB/wHqBQAB8ggAAQcRAAHsARECAAHvAQACBwHxAQACBwG8AQADBwEA
+        AfACBwEAAewBEQMAAQcDAAH4CAABBwMAAfgJAAG8BgABbQH/BwABBxEAAewBEQIAAe8FAAP/AQAD/wEA
+        A/8BAAHsAREDAAH3AwAB6ggAAfcDAAH4CQABbQYAAREB9AcAAQcRAAHsARECAAHvBwABEQUAARMDAAHs
+        ARECAAH/AREDAAEOAf8GAAH/AeoDAAEQCQABDwYAAQ4B9AcAAQcRAAHsARECAAHvBwABEQUAARMDAAHs
+        ARECAAHvAQ4EAAHsAf8FAAG8AQ4EAAGSAf8PAAH0BwABBxEAAewBEQIAAe8FAALsAZIBAAPsAQAB7wLs
+        AQAB7AERAQAB8QEOBgABbQH0AgAB/wGSAQ8GAAGSDwAB9AcAAQcRAAHsARECAAHvEQAB7AERAgABbQcA
+        AQ4BbQH4AREHAAEOAfIHAAEPBgABDgH0BwABBxEAAewBEQIAAe8RAAHsARECAAHxAQ4RAAHtAf8HAAGS
+        BgABFAH/BwABBxEAAewBEQIAAUMRbQIRAgAB/wFtAUMCEwERCAABEAEUARMBQwEVAf8IAAHyAQ4FAAHt
+        Af8HAAEHEQAB7AERFQABEQMAAvQC/wH0AfcGAAETAfMC/wL0CQAB/wG8AW0BEAEOARIB9wH0CAABBxEA
+        AewBERUAAREIAAH/AW0EAAEOAfEeAAG8KAABEQkAAQcEAAHsHwAB9AEPFgACBwGSCQAB9wIHAgABEQkA
+        AfIEAAEHIQABbQEOFgAB8gkAAfQEAAERAQABQgFNAT4HAAE+AwABKAMAAVgDAAEsAwABAQEAAQEFAAEQ
+        AQIWAAP/AQAC/wH8CQAC/wH8IQABPwH/AcAJAAIgAcAJAAIgAcAJAAEgAT8BwAkAAiABQAkAAiABQAkA
+        AiABQAkAAiABQAkAAiABQAkAASABAAFACQABIAEAAUAJAAE/Af8BwAkAAT8B/wHACwABDAsAAQwJAAL/
+        AfwJAAL/AfwJAAL/AfwJAAH/AQMD/wH8AgABQAEAAQEBAAH/AQMB/gIAARgCAAFAAQABAQEAAf4BAAH+
+        AgABGAEAAQIBSAGIAfkBAAHAAQABDgIAARgBAAECAUgBiAH5AQABgAEAAQcBgAEAATgBfwH+AUgBiAH5
+        AQABgAEAAQMBgAEAAXgBAAECAUgBiAH5AwABAwHwAQMB+AEAAQIBSAGIAYkCAAEwAQMB/gEPAfgBAAEC
+        AUgBiAGJAQABgAH8AQcB/AEHAfgBAAECAUgBiAGJAQABwAH8AQcB+AEHAfgBAAECAUgBiAGJAQABwQH+
+        AQ8B+AEDAfgBAAECAU8BiAGJAQABwQH+AQ8B+AEDAfgBAAECAU8BiAGJAQABgAH8AQ8B+AEDAfgBAAEC
+        AU8BiAGJAQABgAF8AQMB+AEDAfgBAAECAU8BiAGJAgABMAEDAfgBAwH4AQABAgFPAf8B+QEAAYABAAED
+        AfgBAwH4AQABAgFPAf8B+QEAAYABAAEDAfgBAwH4AQABAgFAAQABAQEAAYABAAEHAfgBAwH4AQABAgFA
+        AQABAQEAAcABAAEPAfgBBwH4AQABAgFAAQABAQEAAf4BAQP/AfgBAAEDAcABAAEBAQAB/wEDA/8B+AEA
+        AQMBwAEAAQEBAAH/AQMD/wH+AQABAwHGAQABMQEACw==
 </value>
   </data>
 </root>
