Cambios de Oscar hechos

--- a/LP2Soft/Cursos/frmCursos_VerCurso.resx
+++ b/LP2Soft/Cursos/frmCursos_VerCurso.resx
@@ -126,4 +126,7 @@ Diseño de un sistema de información con UML: arquitectura de software, patrone
  Sistemas de información 1 (obligatorio)
 Lenguaje de programación 1 (obligatorio)</value>
   </data>
+  <metadata name="toolTipVerCurso.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
