Estrelas de Asesor :)

--- a/LP2Soft/Perfil/frmCrearResenia.resx
+++ b/LP2Soft/Perfil/frmCrearResenia.resx
@@ -117,4 +117,86 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imgEstrellas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>20, 17</value>
+  </metadata>
+  <data name="imgEstrellas.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACk
+        EAAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABeAMAAR4DAAEBAQABCAUAARABDhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/9wAB8gHwAfIB9AkA
+        Af8B9AHxAfAB8wwAAfIB8AHyAfQJAAH/AfQB8QHwAfMMAAHyAfAB8gH0CQAB/wH0AfEB8AHzKgAB7AEU
+        AesBvAH0Af8GAAH/AfMBBwESARQB7wwAAewBFAHrAbwB9AH/BgAB/wHzAQcBEgEUAe8MAAHsARQB6wG8
+        AfQB/wYAAf8B8wEHARIBFAHvKgABbQEOAQABEAHvAfQGAAHzAewCAAEPAe8MAAFtAQ4BAAEQAe8B9AYA
+        AfMB7AIAAQ8B7wwAAW0BDgEAARAB7wH0BgAB8wHsAgABDwHvKgABkgERAgABEAHrAQcB8wIAAfMB7wFt
+        AQ8CAAETAQcMAAGSARECAAEQAesBBwHzAgAB8wHvAW0BDwIAARMBBwwAAZIBEQIAARAB6wEHAfMCAAHz
+        Ae8BbQEPAgABEwEHKgABBwEUAQ4CQwEQARQBkgLxAfgBFQEQAREBDwEAAesB8QwAAQcBFAMAAQ8BFAGS
+        AvEB+AEVAQ4DAAHrAfEMAAEHARQDAAEPARQBkgLxAfgBFQEQAREBDwEAAesB8SoAAfEBEgEQAW0BBwFt
+        AQ8BEQJtAQ4BEQFtAewBDwEAAewB8wwAAfEBEgUAARECbQEOBQAB7AHzDAAB8QESBQABEQJtAQ4BEQFt
+        AewBDwEAAewB8yoAAfMBbQEPAfgB/wHwAesBEAIOAREB7QHwAQcBAAEOAfcB9AwAAfMBbQ0AAQ4B9wH0
+        DAAB8wFtBwABDgERAe0B8AEHAQABDgH3AfQrAAGSAQABQwL/AfMB7wISAbwB9AHzAe8BAAESAfEOAAGS
+        DQABEgHxDgABkgYAAQ4BEgG8AfQB8wHvAQABEgHxLAAB7wFDAREB8gH0Af8E9AH/AfIB7AEAAewB8g4A
+        Ae8BQwwAAewB8g4AAe8BQwUAARMC9AH/AfIB7AEAAewB8iwAAbwBEgEQAQcB9AYAAfEBEwEAAe8B8w4A
+        AbwBEgwAAe8B8w4AAbwBEgUAARIDAAHxARMBAAHvAfMrAAH0Ae8BFQEQAQcB9AYAAfABQwEAAesB8AH0
+        DAAB9AHvARUMAAHrAfAB9AwAAfQB7wEVBQABEgMAAfABQwEAAesB8AH0KAAB/wH0AQcBFAEOARQB8AH0
+        BgAB8QHqAg4B+AHxAf8JAAH/AfQBBwEUDQABDgH4AfEB/wkAAf8B9AEHARQGAAESAwAB8QHqAg4B+AHx
+        Af8nAAH0AfABEQEAARUB7wgAAfQB8QESAg4BbQHzCQAB9AHwAREPAAEOAW0B8wkAAfQB8AERBwABEgMA
+        AfQB8QESAg4BbQHzJgAB9AEHAREBDgFtAbwB9AgAAf8B9AHxAewBQwEPAW0B8QH/BgAB9AEHAREBDhAA
+        AQ8BbQHxAf8GAAH0AQcBEQEOBwABEgMAAf8B9AHxAewBQwEPAW0B8QH/IwAB9AEHARQBAAETAe8B8gHz
+        CQAB/wH0AbwBbQEQAQ8BEgHwAfQEAAH0AQcBFBMAAQ8BEgHwAfQEAAH0AQcBFAkAARIEAAH/AfQBvAFt
+        ARABDwESAfAB9CIAAbwBEwIAARMB6wHsAe0CvAHyAfQCAAH0AfEBvAEHAuwBEgEPAgABbQHyBAABvAET
+        FgABbQHyBAABvAETCgABEgEAAfQB8QG8AQcC7AESAQ8CAAFtAfIiAAHvAREBEAEPBA4BAAEOAewB8wIA
+        AfIBbQEOAQADDgEPAhABEQHwBAAB7wERARABDwQOCgADDgEPAhABEQHwBAAB7wERARABDwQOBAABEgEA
+        AfIB6gIAAw4BDwIQAREB8CIAAfMBvAHvAe0B6wFtAeoBFAIAAeoBvAIAAe8BFQEAAQ4BEgJtAfgBkgHv
+        AfAB8wQAAfMBvAHvAe0B6wFtAeoBFAkAAQ4BEgJtAfgBkgHvAfAB8wQAAfMBvAHvAe0B6wFtAeoBFAQA
+        ARIBAAHvARUBAAEOARICbQH4AZIB7wHwAfMiAAH/BvQB8gEHARABDgHsAv8BEgEOARMBvAf0Af8EAAH/
+        BvQB8gEHARAGAAETAbwH9AH/BAAB/wb0AfIBBwEQAgABQwHzARMBDgETAbwH9AH/KQAB/wH0AfgBEAES
+        AvABEQFDAe8B9BMAAf8B9AH4ARAEAAFDAe8B9BMAAf8B9AH4ARABAAERAbwBEQFDAe8B9DMAAQcBFAER
+        AusBDwFtAfEWAAEHARQEAAFtAfEWAAEHARQBAAEOAesBDwFtAfE0AAHzAesEDgGSAfMWAAHzAesBDgIA
+        AQ4BkgHzFgAB8wHrAQ4BAAIOAZIB8zUAAQcBFQIAARIB8RgAAQcBFQIAARIB8RgAAQcBFQIAARIB8TYA
+        AfEB6wIAAZIB8xgAAfEB6wIAAZIB8xgAAfEB6wIAAZIB8zYAAfQBBwJDAfAB/xgAAfQBBwJDAfAB/xgA
+        AfQBBwJDAfAB/zcAAfMB7wEHAf8aAAHzAe8BBwH/GgAB8wHvAQcB//8AHAABQgFNAT4HAAE+AwABKAMA
+        AXgDAAEeAwABAQEAAQEFAAHgAQEWAAP/AQAL/wHABAAL/wHABAAB/AE/AeAB/wHwAf8BgwH/AcMB/gEP
+        AcAEAAH8AQ8BwAH/AfABPwEDAf8BwAH8AQ8BwAQAAfwBDwHAAf8B8AE/AQMB/wHAAfwBDwHABAAB/AED
+        AQAB/wHwAQwBAwH/AcABMAEPAcAEAAH8AgAB/wHwAQABAwH/AcABAAEPAcAEAAH8AgAB/wHwAQABAwH/
+        AcABAAEPAcAEAAH8AgAB/wHwAQABAwH/AcABAAEPAcAEAAH+AQABAQH/AfgBAAEHAf8B4AEAAR8BwAQA
+        Af4BAAEBAf8B+AEAAQcB/wHgAQABHwHABAAB/gEPAcEB/wH4AQABBwH/AeABHAEfAcAEAAH8AQ8BwAH/
+        AfABAAEDAf8BwAEcAQ8BwAQAAfABDwHAAX8BwAEAAQEB/wEAARwBBwHABAAB8AE/AcABfwHAAQABAQH/
+        AQABHAEHAcAEAAHgAT8BwAEfAYACAAF+AQABHAEBAcAEAAHAAT8B4AEPAwABPAEAAR4BAAHABAABwAED
+        AQABDwMAATwBAAEQAQABwAQAAcABAwEAAQ8DAAE8AQABEAEAAcAEAAHAAQMBAAEPAwABPAEAARABAAHA
+        BAABwAIAAQ8DAAE8AwABwAQAAf8BgAEPAf8B/gEAAT8B/wH4AQAB/wHABAAB/wHgAR8C/wGAAX8B/wH+
+        AQEB/wHABAAB/wHgAR8C/wGAAX8B/wH+AQEB/wHABAAB/wHwAT8C/wHAA/8BAwH/AcAEAAH/AfABPwL/
+        AcAD/wEDAf8BwAQAAf8B8AE/Av8BwAP/AQMB/wHABAAB/wH4AX8C/wHhA/8BhwH/AcAEAAv/AcAEAAv/
+        AcAEAAs=
+</value>
+  </data>
 </root>
