--- a/LP2Soft/Tarjetas/tarjAsesor.resx
+++ b/LP2Soft/Tarjetas/tarjAsesor.resx
@@ -117,4 +117,64 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imgEstrellas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imgEstrellas.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
+        CwAAAk1TRnQBSQFMAgEBAwEAATgBAAE4AQABGAEAARgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABYAMAARgDAAEBAQABCAYAAQkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/8YAAhMB8wgAAfMCEwoA
+        AhMB8wgAAfMCEwoAAhMB8wgAAfMCEyIAAQ8CAAHvBgAB7wIAAUMKAAEPAgAB7wYAAe8CAAFDCgABDwIA
+        Ae8GAAHvAgABQyIAAewDAAETAfMCAAHzARMDAAHtCgAB7AMAARMB8wIAAfMBEwMAAe0KAAHsAwABEwHz
+        AgAB8wETAwAB7SIAAQcBAAISAgAC7wIAARIBQwEAAfEKAAEHBQAC7wUAAfEKAAEHBQAC7wIAARIBQwEA
+        AfEiAAHyAQABEwEAAe8EAAHvAf8CAAH/CgAB8gwAAf8KAAHyCAAB7wH/AgAB/yUAAf8BAAHzAhIB8wEA
+        AfEBAAFtFwABbRIAARIB8wEAAfEBAAFtJAABbQEAAfEGAAHtAQABBwwAAW0KAAEHDAABbQgAAe0BAAEH
+        JAAB9wEAAe8GAAFDAQAB8gwAAfcKAAHyDAAB9wgAAUMBAAHyIwAB8AIAAQcGAAETAQABDwHzCgAB8AsA
+        AQ8B8woAAfAJAAETAQABDwHzIQAB8AIAAe0HAAH/ARIBAAEPAfMIAAHwDQABDwHzCAAB8AoAAf8BEgEA
+        AQ8B8x8AAfACAAHwCQAB/wHtAQABDwHwBgAB8A8AAQ8B8AYAAfAMAAH/Ae0BAAEPAfAdAAHwAgAB7QHy
+        AfMIAAHzAfIBEwIAAfAEAAHwEgAB8AQAAfANAAHzAfIBEwIAAfAjAAEPAfQCAAH0AQ8uAAH0JAAB8QHv
+        Ae0CbQESAgAB7QIAAe0CAAESAm0B7QHvAfEEAAHxAe8B7QJtARIIAAESAm0B7QHvAfEEAAHxAe8B7QJt
+        ARIFAAHtAgABEgJtAe0B7wHxIgAB9AIAAv8CAAH0EAAB9AYAAfQQAAH0AwAB9AIAAfQpAAHsAQAC7wEA
+        Ae0SAAHsBAAB7RIAAewCAAHvAQAB7SoAAfIBAAIPAQAB8hIAAfIEAAHyEgAB8gIAAQ8BAAHyKwABbQIA
+        AW0UAAFtAgABbRQAAW0CAAFtLAAB8AIAAfAUAAHwAgAB8BQAAfACAAHwLQABEwESFgABEwESFgABEwES
+        4wABQgFNAT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAJ/wMACf8DAAH4Af8BHwH4
+        Af8BHwH4Af8BHwMAAfgBfgEfAfgBfgEfAfgBfgEfAwAB+AEYAR8B+AEYAR8B+AEYAR8DAAH4AQABHwH4
+        AQABHwH4AQABHwMAAfgBgAEfAfgBAAEfAfgBAAEfAwAB/AFCAT8B/AEAAT8B/AECAT8DAAH8AX4BPwH8
+        AQABPwH8AQ4BPwMAAfwBfgE/AfwBAAE/AfwBDgE/AwAB+AF+AR8B+AEAAR8B+AEOAR8DAAHwAf4BDwHw
+        AQABDwHwAQ4BDwMAAeEB/wEHAeABAAEHAeABDwEHAwABwAH/AQMBwAEAAQMBwAEPAQMDAAHAARgBAwHA
+        AQABAwHAAQgBAwMAAcABGAEDAcABAAEDAcABCAEDAwAB/wEAAv8BAAL/AQAB/wMAAf8BgQL/AYEC/wGB
+        Af8DAAH/AYEC/wGBAv8BgQH/AwAB/wHDAv8BwwL/AcMB/wMAAf8BwwL/AcMC/wHDAf8DAAH/AecC/wHn
+        Av8B5wH/AwAJ/wMACf8DAAs=
+</value>
+  </data>
 </root>
