--- a/LP2Soft/Tarjetas/tarjResenia.resx
+++ b/LP2Soft/Tarjetas/tarjResenia.resx
@@ -117,47 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="picStar5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAuBJREFUaEPt
-        mEfIE0EYQGNvIOhBRQVBBLEgWE7iRQURC3ZBUBAUrx5FT4oXxZN4UkSwozcbgu0kqCexgCCKelGwYe/t
-        vc0O5A/J//+7ySZZyYNHdjbZ2Z3Zb2a+SaFNmzaZMig2t6zGVcXDfHIaTxUP88dA/ISfMZdhtBL/xq7w
-        RN44iR9iPc4V/dEHP4bH8SMOwNywHA2dJbg0Pl6GueEE+gbsdd/Ge/RN5IJKD1zaoJYnhIyfAcMnhFTL
-        48AtH7ThrRyNSi1MP3yHhkw5YVq1MS3LYqw244SZaVFUalGOYLU5P4TR4aiUEWtwfw36gJ2tun7nbypd
-        2119xqr0wM34DX3daexswQphlMYfuB17YZdMwtv4B211M7JJQ24X/sb7OBUT0QdtsRU8wBnYKKbgHbQD
-        96KzW2pm4mP8ifaIDcuK3rgFv+MznI11YTAaSsbiLRyP9WYsXkfv4U5uKNYdNymv8QvaUz2xVpw4NqG7
-        NxfBtZgpI/AC2lOXcDSmxbrOo3VdxlrqSkToNfe79to6TIr/VrzBr1ivt5kYp1sbcS8qJeMuGjYTo1KT
-        mIC+/q1RKRnb0Gub2oCd6EOMi0rJGIPO8zuiUpN4iDeKh6m4iY+Kh41nOtr75k7VmB9bDa+1jsRpQj3Y
-        g6YZI6NSR0rzmJBP+U9dOU6jv3B3VGogTqMu9VejUkcmozOMPXsw1mPP+V051vEUrbNhzEIfakNUKlK+
-        NpTm7abYruCV5vyNaF3mXA1jH5pwhXxlGJ5DH+QaVlpRDZeL6G9cwUPoDUH3H2adDcHee45nolKhMA8t
-        m62afne2ovqWHLg2/iW6h5az+AK7tVmplbloL65He81B6n5hGnaX0nHiPjqE0RzMnAPozZ7En2l3bF4T
-        UvTSujLFzYyD0Zu9wnr80+Y6YfhY51vsi5mxEL3RFRzliToxHEOKvsATWXEIuxqoaQkD3BDNDLd9WdOI
-        e7Rp859QKPwDhLHYhCtR9GkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="picStar4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAuBJREFUaEPt
-        mEfIE0EYQGNvIOhBRQVBBLEgWE7iRQURC3ZBUBAUrx5FT4oXxZN4UkSwozcbgu0kqCexgCCKelGwYe/t
-        vc0O5A/J//+7ySZZyYNHdjbZ2Z3Zb2a+SaFNmzaZMig2t6zGVcXDfHIaTxUP88dA/ISfMZdhtBL/xq7w
-        RN44iR9iPc4V/dEHP4bH8SMOwNywHA2dJbg0Pl6GueEE+gbsdd/Ge/RN5IJKD1zaoJYnhIyfAcMnhFTL
-        48AtH7ThrRyNSi1MP3yHhkw5YVq1MS3LYqw244SZaVFUalGOYLU5P4TR4aiUEWtwfw36gJ2tun7nbypd
-        2119xqr0wM34DX3daexswQphlMYfuB17YZdMwtv4B211M7JJQ24X/sb7OBUT0QdtsRU8wBnYKKbgHbQD
-        96KzW2pm4mP8ifaIDcuK3rgFv+MznI11YTAaSsbiLRyP9WYsXkfv4U5uKNYdNymv8QvaUz2xVpw4NqG7
-        NxfBtZgpI/AC2lOXcDSmxbrOo3VdxlrqSkToNfe79to6TIr/VrzBr1ivt5kYp1sbcS8qJeMuGjYTo1KT
-        mIC+/q1RKRnb0Gub2oCd6EOMi0rJGIPO8zuiUpN4iDeKh6m4iY+Kh41nOtr75k7VmB9bDa+1jsRpQj3Y
-        g6YZI6NSR0rzmJBP+U9dOU6jv3B3VGogTqMu9VejUkcmozOMPXsw1mPP+V051vEUrbNhzEIfakNUKlK+
-        NpTm7abYruCV5vyNaF3mXA1jH5pwhXxlGJ5DH+QaVlpRDZeL6G9cwUPoDUH3H2adDcHee45nolKhMA8t
-        m62afne2ovqWHLg2/iW6h5az+AK7tVmplbloL65He81B6n5hGnaX0nHiPjqE0RzMnAPozZ7En2l3bF4T
-        UvTSujLFzYyD0Zu9wnr80+Y6YfhY51vsi5mxEL3RFRzliToxHEOKvsATWXEIuxqoaQkD3BDNDLd9WdOI
-        e7Rp859QKPwDhLHYhCtR9GkAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="imgEstrellas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>133, 17</value>
   </metadata>
+  <data name="imgEstrellas.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
+        CwAAAk1TRnQBSQFMAgEBAwEAAUABAAFAAQABGAEAARgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABYAMAARgDAAEBAQABCAYAAQkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/8YAAhMB8wgAAfMCEwoA
+        AhMB8wgAAfMCEwoAAhMB8wgAAfMCEyIAAQ8CAAHvBgAB7wIAAUMKAAEPAgAB7wYAAe8CAAFDCgABDwIA
+        Ae8GAAHvAgABQyIAAewDAAETAfMCAAHzARMDAAHtCgAB7AMAARMB8wIAAfMBEwMAAe0KAAHsAwABEwHz
+        AgAB8wETAwAB7SIAAQcBAAISAgAC7wIAARIBQwEAAfEKAAEHBQAC7wUAAfEKAAEHBQAC7wIAARIBQwEA
+        AfEiAAHyAQABEwEAAe8EAAHvAf8CAAH/CgAB8gwAAf8KAAHyCAAB7wH/AgAB/yUAAf8BAAHzAhIB8wEA
+        AfEBAAFtFwABbRIAARIB8wEAAfEBAAFtJAABbQEAAfEGAAHtAQABBwwAAW0KAAEHDAABbQgAAe0BAAEH
+        JAAB9wEAAe8GAAFDAQAB8gwAAfcKAAHyDAAB9wgAAUMBAAHyIwAB8AIAAQcGAAETAQABDwHzCgAB8AsA
+        AQ8B8woAAfAJAAETAQABDwHzIQAB8AIAAe0HAAH/ARIBAAEPAfMIAAHwDQABDwHzCAAB8AoAAf8BEgEA
+        AQ8B8x8AAfACAAHwCQAB/wHtAQABDwHwBgAB8A8AAQ8B8AYAAfAMAAH/Ae0BAAEPAfAdAAHwAgAB7QHy
+        AfMIAAHzAfIBEwIAAfAEAAHwEgAB8AQAAfANAAHzAfIBEwIAAfAjAAEPAfQCAAH0AQ8uAAH0JAAB8QHv
+        Ae0CbQESAgAB7QIAAe0CAAESAm0B7QHvAfEEAAHxAe8B7QJtARIIAAESAm0B7QHvAfEEAAHxAe8B7QJt
+        ARIFAAHtAgABEgJtAe0B7wHxIgAB9AIAAv8CAAH0EAAB9AYAAfQQAAH0AwAB9AIAAfQpAAHsAQAC7wEA
+        Ae0SAAHsBAAB7RIAAewCAAHvAQAB7SoAAfIBAAIPAQAB8hIAAfIEAAHyEgAB8gIAAQ8BAAHyKwABbQIA
+        AW0UAAFtAgABbRQAAW0CAAFtLAAB8AIAAfAUAAHwAgAB8BQAAfACAAHwLQABEwESFgABEwESFgABEwES
+        4wABQgFNAT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAJ/wMACf8DAAH4Af8BHwH4
+        Af8BHwH4Af8BHwMAAfgBfgEfAfgBfgEfAfgBfgEfAwAB+AEYAR8B+AEYAR8B+AEYAR8DAAH4AQABHwH4
+        AQABHwH4AQABHwMAAfgBgAEfAfgBAAEfAfgBAAEfAwAB/AFCAT8B/AEAAT8B/AECAT8DAAH8AX4BPwH8
+        AQABPwH8AQ4BPwMAAfwBfgE/AfwBAAE/AfwBDgE/AwAB+AF+AR8B+AEAAR8B+AEOAR8DAAHwAf4BDwHw
+        AQABDwHwAQ4BDwMAAeEB/wEHAeABAAEHAeABDwEHAwABwAH/AQMBwAEAAQMBwAEPAQMDAAHAARgBAwHA
+        AQABAwHAAQgBAwMAAcABGAEDAcABAAEDAcABCAEDAwAB/wEAAv8BAAL/AQAB/wMAAf8BgQL/AYEC/wGB
+        Af8DAAH/AYEC/wGBAv8BgQH/AwAB/wHDAv8BwwL/AcMB/wMAAf8BwwL/AcMC/wHDAf8DAAH/AecC/wHn
+        Av8B5wH/AwAJ/wMACf8DAAs=
+</value>
+  </data>
 </root>
