--- a/LP2Soft/Eventos/frmPostEvento.resx
+++ b/LP2Soft/Eventos/frmPostEvento.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC8
-        DAAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABHgEAARwBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
+        DAAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABHgEAARwBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABeAMAARwDAAEBAQABCAUAASABDRgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -154,34 +154,37 @@
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
         AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/FAAB/wHvARICDgEV
-        AZIB9BYAAf8B7wESAg4BFQGSAfRRAAHxAQ8B6gG8AvMB8QHsAQ4B7wH/EwAB8QEPAeoBvALzAfAB+AEA
-        Ae8B/z0AAf8BBw/sAfgBDgEHAf8FAAHyARAB7wEAAf8BBw/sAfgBDgEHAf8EAAH/AfgBAAHvPQAB7QFD
-        Du8B9wEAAQcDAAH0AfIDAAHzAQAB8wHtAUMO7wH3AQABBwUAAf8B7QEQAQcBAAHzPAABDgHxDgABBwFD
-        Af8DAAHvAW0EAALsAQ4B8Q4AAQcBQwH/BAAB/wHsAREB9AEAAuw9AAHyDgAB7AGSAgAB/wH0AZIB6gL0
-        AgAB8AEQAQAB8g4AAewBkgQAAf8BbQEVAfQCAAHwARA9AAHyDgABbQHvAgABQwUAAfQBAAHyAgAB8g4A
-        AW0B7wMAAf8B6gETAf8DAAHyPgAB8g4AAuwEAAHvAW0EAAG8AUMBAAHyDgAC7AIAAf8BEwHqAf8EAAG8
-        AUM9AAHyDgAB8AEQAf8DAAHvAW0EAAFtAe0BAAHyDgAB8AEPAf8B9AEVAW0B/wUAAW0B7T0AAfIOAAH/
-        ARUBkgMAAf8B9AMAAfABDgH0AQAB8g4AAf8BFQH4AREB7AH/BQAB8AEOAfQ9AAHyDwAB8wEOAZIB/wQA
-        Af8BvAEOAbwCAAHyDwAB8wEOAUMB/wQAAf8BvAEOAbw+AAHyEAAB8wEUARAB9wLwAe8BEwEAAZIDAAHy
-        EAAB8wEUARABkgLwAe8BEwEAAZI/AAHyEQAB/wHxAewCEgH4AQcB6gHvAwAB8hEAAf8B8QHsAhIB+AEH
-        AeoB7z8AAfIYAAFtAe8DAAHyGAABbQHvPwAB8hgAAW0B7wMAAfIYAAFtAe8/AAHyGAABbQHvAwAB8hgA
-        AW0B7z8AAfIYAAFtAe8DAAHyGAABbQHvPwAB8hgAAW0B7wMAAfIYAAFtAe8/AAHvGPEBEwHvAwAB7xjx
-        ARMB7z8AAUMYEwEOAe8DAAFDGBMBDgHvPwAB8hgAAW0B7wMAAfIYAAFtAe8/AAHyBAABBwEOAQcJAAH/
-        AhQB/wQAAW0B7wMAAfIEAAEHAQ4BBwkAAf8CFAH/BAABbQHvPwAB8gQAAewBAAFtCQAB9AIAAfIEAAFt
-        Ae8DAAHyBAAB7AEAAW0JAAH0AgAB8gQAAW0B7z4AAQ4B8QQAAf8B7AFtCgAB8wEAAfIEAAESAQcCAAEO
-        AfEEAAH/AewBbQoAAfMBAAHyBAABEgEHPgAB7QFDBe8BbQFDC+8BAAHtA+8B7AEOAfQCAAHtAUMF7wFt
-        AUML7wEAAe0D7wHsAQ4B9D4AAf8BBwXsARMBEAvsAQABbQPsAZIB8wMAAf8BBwXsARMBEAvsAQABbQPs
-        AZIB80YAAe8BbQoAAf8BAAHyDwAB7wFtCgAB/wEAAfJLAAG8AewKAAH/AUMB9A8AAbwB7AoAAf8BQwH0
-        RAABQgFNAT4HAAE+AwABKAMAAXgDAAEcAwABAQEAAQEFAAHAAQEWAAP/AQAC/wHgAR8C/wGAAXAIAAL/
-        AcABBwL/AQABEAoAAQcBxAIAAR4BEAoAARwB4AIAAXwJAAE/Af8BHAHwAf8B/AF4AUAIAAE/Af8CMAH/
-        AfwB8AHACAABPwH/ATABEAH/AfwB4QHACAABPwH/ATwB8AH/AfwBwwHACAABPwH/ARwB8AH/AfwBBwHA
-        CAABPwH/ARwB4AH/AfwBDwGACAABPwH/AYcBhAH/Af4BHgEQCAABPwH/AcABDAL/AQABMAgAAT8B/wHg
-        AQwC/wGAATAIAAE/Av8BzAP/ATAIAAE/Av8BzAP/ATAIAAE/Av8BzAP/ATAIAAE/Av8BzAP/ATAIAAE/
-        Av8BzAP/ATALAAEMAwABMAsAAQwDAAEwCAABPwL/AcwD/wEwCAABPAF/AcMBzAHxAf8BDwEwCAABPAF/
-        AcMBzAHxAf8BDwEwCAABPAF/AeMBzAHxAf8BjwEwCwABDAMAATALAAEcAwABcAgAAf4BfwHjAf8B+QH/
-        AY8B8AgAAf4BfwHjAf8B+QH/AY8B8AgACw==
+        AZIB9BYAAf8B7wESAg4BFQGSAfRRAAHxAQ8B6gG8AvMB8QHsAQ4B7wH/EwAB8QEPAeoBvALzAfAB7AEA
+        Ae8B/z0AAf8BBxDsAQ4BBwH/BQAB8gEQAe8BAAH/AQcQ7AEOAQcB/wQAAf8B7AEAAe89AAHtAUMO7wH3
+        AQABBwMAAfQB8gMAAfMBAAHzAe0BQw7vAfcBAAEHBQAB/wHtARABBwEAAfM8AAEOAfEOAAEHAUMB/wMA
+        Ae8BbQQAAuwBDgHxDgABBwFDAf8EAAH/AewBEQH0AQAC7D0AAfIOAAHsAZICAAH/AfQBkgHqAvQCAAHw
+        ARABAAHyDgAB7AGSBAAB/wFtARUB9AIAAfABED0AAfIOAAFtAe8CAAFDBQAB9AEAAfICAAHyDgABbQHv
+        AwAB/wHqARMB/wMAAfI+AAHyDgAC7AQAAe8BbQQAAbwBQwEAAfIOAALsAgAB/wETAeoB/wQAAbwBQz0A
+        AfIOAAHwARAB/wMAAe8BbQQAAW0B7QEAAfIOAAHwAQ8B/wH0ARUBbQH/BQABbQHtPQAB8g4AAf8BFQGS
+        AwAB/wH0AwAB8AEOAfQBAAHyDgAB/wEVAewBEQHsAf8FAAHwAQ4B9D0AAfIPAAHzAQ4BkgH/BAAB/wG8
+        AQ4BvAIAAfIPAAHzAQ4BQwH/BAAB/wG8AQ4BvD4AAfIQAAHzARQBEAH3AvAB7wETAQABkgMAAfIQAAHz
+        ARQBEAGSAvAB7wETAQABkj8AAfIRAAH/AfEB7AISAewBBwHqAe8DAAHyEQAB/wHxAewCEgHsAQcB6gHv
+        PwAB8hgAAW0B7wMAAfIYAAFtAe8/AAHyGAABbQHvAwAB8hgAAW0B7z8AAfIYAAFtAe8DAAHyGAABbQHv
+        PwAB8hgAAW0B7wMAAfIYAAFtAe8/AAHyGAABbQHvAwAB8hgAAW0B7z8AAe8Y8QETAe8DAAHvGPEBEwHv
+        PwABQxgTAQ4B7wMAAUMYEwEOAe8/AAHyGAABbQHvAwAB8hgAAW0B7z8AAfIEAAEHAQ4BBwkAAf8CFAH/
+        BAABbQHvAwAB8gQAAQcBDgEHCQAB/wIUAf8EAAFtAe8/AAHyBAAB7AEAAW0JAAH0AgAB8gQAAW0B7wMA
+        AfIEAAHsAQABbQkAAfQCAAHyBAABbQHvPgABDgHxBAAB/wHsAW0KAAHzAQAB8gQAARIBBwIAAQ4B8QQA
+        Af8B7AFtCgAB8wEAAfIEAAESAQc+AAHtAUMF7wFtAUML7wEAAe0D7wHsAQ4B9AIAAe0BQwXvAW0BQwvv
+        AQAB7QPvAewBDgH0PgAB/wEHBewBEwEQC+wBAAFtA+wBkgHzAwAB/wEHBewBEwEQC+wBAAFtA+wBkgHz
+        RgAB7wFtCgAB/wEAAfIPAAHvAW0KAAH/AQAB8ksAAbwB7AoAAf8BQwH0DwABvAHsCgAB/wFDAfREAAFC
+        AU0BPgcAAT4DAAEoAwABeAMAARwDAAEBAQABAQUAAcABARYAA/8BAAL/AeABHwL/AYABcAgAAv8BwAEH
+        Av8BAAEQCgABBwHEAgABHgEQCgABHAHgAgABfAkAAT8B/wEcAfAB/wH8AXgBQAgAAT8B/wIwAf8B/AHw
+        AcAIAAE/Af8BMAEQAf8B/AHhAcAIAAE/Af8BPAHwAf8B/AHDAcAIAAE/Af8BHAHwAf8B/AEHAcAIAAE/
+        Af8BHAHgAf8B/AEPAYAIAAE/Af8BhwGEAf8B/gEeARAIAAE/Af8BwAEMAv8BAAEwCAABPwH/AeABDAL/
+        AYABMAgAAT8C/wHMA/8BMAgAAT8C/wHMA/8BMAgAAT8C/wHMA/8BMAgAAT8C/wHMA/8BMAgAAT8C/wHM
+        A/8BMAsAAQwDAAEwCwABDAMAATAIAAE/Av8BzAP/ATAIAAE8AX8BwwHMAfEB/wEPATAIAAE8AX8BwwHM
+        AfEB/wEPATAIAAE8AX8B4wHMAfEB/wGPATALAAEMAwABMAsAARwDAAFwCAAB/gF/AeMB/wH5Af8BjwHw
+        CAAB/gF/AeMB/wH5Af8BjwHwCAAL
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>237, 17</value>
+  </metadata>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -190,7 +193,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACQ
-        CgAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CgAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABUAMAARQDAAEBAQABCAUAAUABBhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -219,18 +222,18 @@
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
         AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/FQAB/wTyAvMI8gHz
-        Af8rAAEHA5IBBwEAAfQB8AHvB5IB7wHxAfQBAAHzAesC6gFtAfgB6wFtBuoBbQHsAfIB9CoAARUBDgIA
-        ARIBAAG8AW0BEAcAAUMB7AHxAQAB8QERAW0B6wFDARABEgFtAfgEkgHsARIBEQG8AfQuAAESAQAB7AEQ
+        Af8rAAEHA5IBBwEAAfQB8AHvB5IB7wHxAfQBAAHzAesC6gFtAewB6wFtBuoBbQHsAfIB9CoAARUBDgIA
+        ARIBAAG8AW0BEAcAAUMB7AHxAQAB8QERAW0B6wFDARABEgFtAewEkgHsARIBEQG8AfQuAAESAQAB7AEQ
         CQABQwHvAf8B8QERAbwB8gHrAREB7wHyAfQEAAH0AbwBDwGSAfIB/y0AARIBAAESCwABbQH/AfEBEQG8
         AfIC7AH0BwAB9AHsAeoB7wH0LQABEgEAARILAAHqAfMB8QERAbwB8gLsAfQHAAH0AfEBFQHsAfMtAAES
-        AQABEgsAARIC8QERAbwB8gLsAfQHAAH/AfQB+AHrAQcB9CwAARIBAAESCwABFAEHAfEBEQG8AfIC7AH0
-        CQABBwFtAfgB9CwAARIBAAESCwABEQGSAfEBEQG8AfIC7AH0CQAB8wFtAeoB8ywAARIBAAESCwABDgFt
+        AQABEgsAARIC8QERAbwB8gLsAfQHAAH/AfQB7AHrAQcB9CwAARIBAAESCwABFAEHAfEBEQG8AfIC7AH0
+        CQABBwFtAewB9CwAARIBAAESCwABEQGSAfEBEQG8AfIC7AH0CQAB8wFtAeoB8ywAARIBAAESCwABDgFt
         AfEBEQG8AfIC7AH0CgABkgHqAfIsAAESAQABEgsAAQ4BbQHxAREB7QHvAeoBEQG8AfQBAAL/BfIB8ALq
         AfMsAAESAQABbQEOCQABDgEUAe8B8gERAUMBFAEQAQ4B6wHwAvQB8wHrBeoBbQHvAfQoAAEQAQ4CAAES
         AQAB9wFDBAABDgEUAesCkgH3AQcC8wHvApIB7AFtARQBkgHyAfQB8wJDAW0CkgH3AQcB8ykAAe0BbQIS
-        AewBAAHzAfgBDwMAAREB7QH0CQAB/wHzAm0BBwL0AeoB+AHwNQAB8gHsBAAB6gHzCwAB8QESAeoB8gEA
-        Ae8B6wEHNQAB/wHxAfgDAAFDAfcLAAH/Ae8BbQHrAf8BvAFtAfc2AAH0AfEBbQEOAQABDgH4DAAB8gHs
-        ARQB7wHtAW0B7zcAAfQB7gESARABQwHtDAAB9AG8AesC6gHsAfA3AAH/AfQBBwHsAZIB8g0AAfQB8AHr
+        AewBAAHzAewBDwMAAREB7QH0CQAB/wHzAm0BBwL0AeoB7AHwNQAB8gHsBAAB6gHzCwAB8QESAeoB8gEA
+        Ae8B6wEHNQAB/wHxAewDAAFDAfcLAAH/Ae8BbQHrAf8BvAFtAfc2AAH0AfEBbQEOAQABDgHsDAAB8gHs
+        ARQB7wHtAW0B7zcAAfQBvAESARABQwHtDAAB9AG8AesC6gHsAfA3AAH/AfQBBwHsAZIB8g0AAfQB8AHr
         AewBBwH0fgABQgFNAT4HAAE+AwABKAMAAVADAAEUAwABAQEAAQEFAAHwFwAD/wEAAv8B8AEAAQcHAAEE
         AQABEAEAAQMHAAEEAQABEAEAAQMHAAEEAgABBwGBBwABBAIAAR8BwQcAAQQCAAEfAcEHAAEEAgABHwHA
         BwABBAIAAR8B8AcAAQQCAAEfAfAHAAEEAgABHwH4BwABBAIAAQgIAAEECwABBAMAAQEHAAEEAQEB/wEA
